jimador is already declared. No need to declare it in the blueprint
Change-Id: I6b1440f45d2c8ce1d4afeb16aad764b912843cd4

--- a/puppet/modules/runtime_project/files/hiera/layouts/layouts.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/layouts.yaml
@@ -17,8 +17,8 @@
 # designed to work with puppetmaster subnodetype
 #
 
-classes:
-  - jimador::discover
+#classes:
+#  - jimador::discover
 
 jimador::discover:
   gerrit:
