user story #1447 - Fixing warning on bootstrap Change-Id: I042b22ebd78eea0b85bd826651790157aa532c7b

--- a/puppet/modules/runtime_project/files/hiera/layouts/maestro.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/maestro.yaml
@@ -87,3 +87,5 @@ salt::salt_reactor:
 - 'puppet_apply_util'
 - 'puppet_apply_ci'
 
+puppet::reports::graphite::status: 'enabled'
+puppet::reports::graphite::graphite_port: '2003'
