update maestro.yaml to accept configuration from facters
We can provide these values in metadata, otherwise they default to
what we supply.

Change-Id: Ic6eb7bd9cbf12abfbe84d0e970b02c5e741b3950

--- a/puppet/modules/runtime_project/files/hiera/layouts/maestro.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/maestro.yaml
@@ -71,9 +71,9 @@ jimador::documentation:
     url: 'http://docs.forj.io/en/latest/dev/faq.html'
 
 maestro::instance_domain: '%{::erodomain}'
-maestro::image_name: 'proto2b'
-maestro::flavor_name: 'standard.medium'
-maestro::key_name: 'nova'
+maestro::image_name: '%{::image_name}'
+maestro::flavor_name: '%{::flavor_name}'
+maestro::key_name: '%{::key_name}'
 maestro::network_name: '%{::network_name}'
 maestro::security_groups: '%{::security_groups}'
 
