user story #1447 - Fixing backup errors Change-Id: I67a85339aed99dc18710ce52fda12693ef1346ae

--- a/puppet/modules/runtime_project/files/hiera/layouts/ci.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/ci.yaml
@@ -24,6 +24,7 @@ classes:
   - maestro::node_vhost_lookup
   - cdk_project::jenkins
   - cdk_project::zuul
+  - maestro::backup::configure_box
   - maestro::backup::set_app_backup
   - maestro::app::tool_status
 
