puppet.conf files on agent don't point back to the master. These need update so that puppet agent runs complete.
Change-Id: I4887658d963f13297f8e3d00b2a47dfca617a00a

--- a/puppet/modules/runtime_project/files/hiera/layouts/layouts.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/layouts.yaml
@@ -76,3 +76,10 @@ jimador::discover:
     icon: true
     visible: true
 
+# setup parameters for puppet class on all nodes, superseeds maestro.yaml settings.
+puppet::reports: 'http'
+puppet::reporturl: "http://%{::erosite}.%{::erodomain}:3000/reports/upload"
+puppet::manifestdir: "/opt/config/$environment/git/maestro/puppet/manifests"
+puppet::modulepath: "%{::bp_modulepath}/opt/config/$environment/git/maestro/puppet/modules:%{::extra_modulepath}/opt/config/$environment/git/config/modules:/etc/puppet/modules"
+puppet::puppetmaster: "%{::erosite}.%{::erodomain}"
+puppet::puppetmaster::certname: "%{::erosite}.%{::erodomain}"
