--- a/puppet/modules/runtime_project/files/hiera/layouts/layouts.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/layouts.yaml
@@ -17,9 +17,17 @@
 # designed to work with puppetmaster subnodetype
 #
 
-#classes:
-#  - jimador::discover
+# setup swap location fooor all nodes
+sysadmin_config::swap::swap_file: '/mnt/swapfile'
+sysadmin_config::swap::block_size: '1M'
 
+# nodejs wrap global defaults
+nodejs_wrap::node_env: "%{::maestro::params::node_env}"
+
+# nexus server cofiguration
+nexus::artifact::nexus_server: 'http://nexus.cdkdev.org:8080/nexus'
+
+# these applications are discovered by jimador::manage class called from commona.yaml
 jimador::discover:
   gerrit:
     tool_email: "%{::gerrit_email}"
