Adding configuration of iptables for all the nodes.
- Maestro: tcp ports 4505, 4506, 8139, 8140, 80, 443, 3000, 8080
- Review: tcp ports 80, 443, 8139, 8140, 29418, 8080
- Util: tcp ports 22, 80, 443, 8080, 8081, 8125, 2003, udp port 8125
- Ci: ports 80, 443, 8080, 4730, 29418, 8139, 8140

Change-Id: I8f882602bd4c2134ffcc1581f20b7722e2d2f840

--- a/puppet/modules/runtime_project/files/hiera/layouts/ci.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/ci.yaml
@@ -27,6 +27,7 @@ classes:
   - maestro::backup::configure_box
   - maestro::backup::set_app_backup
   - maestro::app::tool_status
+  - sysadmin_config::manage_servers
 
 #Jenkins tool
 cdk_project::jenkins::vhost_name:               "%{::maestro::node_vhost_lookup::vname}"
@@ -79,3 +80,13 @@ maestro::backup::box_db_password:            ''
 
 # use pind version for jeepyb
 jeepyb_config::jeepyb_version: '3c9a851fa93518bde584a75f6dd715b54f878e72'
+
+# setup server (iptables, rsyslog, tcpdump, ssh)
+sysadmin_config::manage_servers::iptables_public_tcp_ports:
+  - 80
+  - 443
+  - 4730
+  - 8080
+  - 8139
+  - 8140
+  - 29418
