--- a/puppet/modules/runtime_project/files/hiera/layouts/util.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/util.yaml
@@ -25,6 +25,7 @@ classes:
   - cdk_project::graphite
   - cdk_project::paste
   - maestro::app::tool_status
+  - sysadmin_config::manage_servers
 
 # NOT USED <= this data may will help jimador to generate the file to the right place on maestro data.
 server::kit: 'demo'
@@ -44,3 +45,17 @@ cdk_project::graphite::graphite_admin_password: ''
 # 'paste' tool
 cdk_project::paste::vhost_name: "%{::maestro::node_vhost_lookup::vname}"
 cdk_project::paste::site_name: 'cdkdev'
+
+# setup server (iptables, rsyslog, tcpdump, ssh)
+sysadmin_config::manage_servers::iptables_public_tcp_ports:
+  - 22
+  - 80
+  - 443
+  - 2003
+  - 8080
+  - 8081
+  - 8125
+sysadmin_config::manage_servers::iptables_rules4: 
+  tool: "zuul_url" 
+  format_rule: "-m udp -p udp -s \\1 --dport 8125 -j ACCEPT"
+sysadmin_config::manage_servers::sysadmins: ''
