Fixed broken documentation links, rewording others
Change-Id: I51215a9b030da643c41da2b10f46c8834dabc038

--- a/puppet/modules/runtime_project/files/hiera/layouts/maestro.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/maestro.yaml
@@ -67,24 +67,24 @@ jimador::documentation:
   - dname: 'Tutorial'
     category: 'tutorial'
     url: '../home/tutorial'
-  - dname: 'OpenStack forj @Forj'
+  - dname: 'Redstone blueprint documentation'
     category: 'tutorial'
-    url: 'http://docs.forj.io/en/latest/user/kits/openstack.html'
-  - dname: 'Review Subsystem (git & gerrit)'
+    url: 'http://docs.forj.io/en/latest/user/kits/redstone.html'
+  - dname: 'Managing code and reviews (Git & Gerrit)'
     category: 'tutorial'
     url: 'http://ci.openstack.org/gerrit.html'
-  - dname: 'CI Subsystem (jenkins)'
+  - dname: 'Build and tests (Jenkins)'
     category: 'tutorial'
     url: 'http://ci.openstack.org/jenkins.html'
-  - dname: 'CI Subsystem (zuul)'
+  - dname: 'Project gating (Zuul)'
     category: 'tutorial'
     url: 'http://ci.openstack.org/zuul.html'
-  - dname: 'Util Subsystem (paste/logedit)'
+  - dname: 'Share code & log snippets (Paste)'
     category: 'tutorial'
     url: 'http://ci.openstack.org/paste.html'
-  - dname: 'FAQ Site'
+  - dname: 'Redstone FAQs'
     category: 'faq'
-    url: 'http://docs.forj.io/en/latest/dev/faq.html'
+    url: 'http://docs.forj.io/en/latest/user/kits/redstone.html#faq'
 
 # This parameter is used in order to hide an application from the UI. Note: you also need to set to false the 'visible' property from the common.yaml.
 jimador::default_tools_filter:
