it was pointed out we only have this on review node.
Update from global to be moved to ci node only.

Change-Id: Ib597c1cc431a59ed9a73f8178cf2f956ae0bc675

--- a/puppet/modules/runtime_project/files/hiera/layouts/review.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/review.yaml
@@ -28,6 +28,9 @@ classes:
   - maestro::app::tool_status
   - sysadmin_config::manage_servers
 
+# use pind version for jeepyb on all servers
+jeepyb_config::jeepyb_version: '3c9a851fa93518bde584a75f6dd715b54f878e72'
+
 # Gerrit tool
 cdk_project::gerrit::vhost_name:                       "%{::maestro::node_vhost_lookup::vname}" #$gerrit_vhost
 cdk_project::gerrit::ip_vhost_name:                    "%{::maestro::node_vhost_lookup::vname}" #$gerrit_server
