Renaming jenkins job templates to be more understandable on their purposes.
- Renaming 'config-layout' job to 'zuul-layout', to be more specific, because this jobs is to validate the zuul layout file and the config-layout didnt says too much.
- Renaming 'tutorials' for 'flake8'.

Change-Id: I155e168ed241e3b430b5a9359da45225975aad2a

--- a/puppet/modules/runtime_project/files/hiera/layouts/ci.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/ci.yaml
@@ -50,9 +50,9 @@ cdk_project::jenkins::zmq_event_receivers:      ''
 cdk_project::jenkins::sysadmins:                ''
 cdk_project::jenkins::openidssourl:             'https://login.launchpad.net/+openid'
 cdk_project::jenkins::job_builder_configs:
-  - 'config-layout.yaml'
+  - 'zuul-layout.yaml'
   - 'fortify-scan.yaml'
-  - 'tutorials.yaml'
+  - 'flake8.yaml'
   - 'publish-to-stackato.yaml'
   - 'puppet-checks.yaml'
 
