--- a/puppet/modules/runtime_project/files/jenkins_job_builder/config/projects.yaml
+++ b/puppet/modules/runtime_project/files/jenkins_job_builder/config/projects.yaml
@@ -10,6 +10,6 @@
    git_project: forj-config
    branch: master
    jobs:
-    - '{name}-config-layout'
+    - '{name}-zuul-layout'
     - '{name}-puppet-checks'
     - 'puppet-apply-all-nodes'
