Patch six pacakge for jenkins module.
Also Fixing the format on the defaults.yaml because the jenkins-job creation was failling regarding this.

Change-Id: I3ee3cbfe5f8bfcfdc0ceb13ed3e14c88c768634a

--- a/puppet/modules/runtime_project/files/jenkins_job_builder/config/defaults.yaml
+++ b/puppet/modules/runtime_project/files/jenkins_job_builder/config/defaults.yaml
@@ -9,9 +9,7 @@
 
       In modules/runtime_project/files/jenkins_job_builder/config
       </p>
-     <p>
-      More instructions can be found <a href="http://docs.forj.io/en/latest/user/kits/redstone.html#adding-a-new-jenkins-job-and-configure-zuul-for-a-given-project-in-gerrit">here</a>.
-      </p>
+      <p>More instructions can be found <a href="http://docs.forj.io/en/latest/user/kits/redstone.html#adding-a-new-jenkins-job-and-configure-zuul-for-a-given-project-in-gerrit">here</a>.</p>
     project-type: freestyle
     concurrent: true
 
