add modifications to ci and review yaml to reflect changes on configurations for backup Change-Id: Icd57f27871b16833078563193c5a90ed23734c59

--- a/puppet/modules/runtime_project/files/hiera/layouts/ci.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/ci.yaml
@@ -75,6 +75,7 @@ maestro::backup::set_app_backup::app_name:   'jenkins'
 maestro::backup::set_app_backup::app_folder: '/var/lib/jenkins'
 maestro::backup::set_app_backup::bkp_name:   'jenkins-bck'
 maestro::backup::configure_box::uses_db:     ''
+maestro::backup::box_db_tool:                ''
 maestro::backup::box_db_user:                ''
 maestro::backup::box_db_password:            ''
 
