user story #2111: Breaking toolstatus.sh into a different version for each node
Change-Id: Ie3bdce0f3d7d1ccdc0d4df6633932969a56c5a1c

--- a/puppet/modules/runtime_project/files/hiera/layouts/ci.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/ci.yaml
@@ -88,3 +88,6 @@ sysadmin_config::manage_servers::iptables_public_tcp_ports:
   - 8139
   - 8140
   - 29418
+
+# Tool status
+maestro::tool_status::source: 'puppet:///modules/runtime_project/tool_status/ci/toolstatus.sh'
