--- a/puppet/modules/runtime_project/files/hiera/layouts/util.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/util.yaml
@@ -59,3 +59,6 @@ sysadmin_config::manage_servers::iptables_rules4:
   tool: "zuul"
   format_rule: "-m udp -p udp -s \1 --dport 8125 -j ACCEPT"
 sysadmin_config::manage_servers::sysadmins: ''
+
+# Tool status
+maestro::tool_status::source: 'puppet:///modules/runtime_project/tool_status/util/toolstatus.sh'
