remove geppetto error with yaml escape.
Change-Id: I255e26d5adb14858ab1ca5bad89fe8f96c0e25de

--- a/puppet/modules/runtime_project/files/hiera/layouts/util.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/util.yaml
@@ -57,7 +57,7 @@ sysadmin_config::manage_servers::iptables_public_tcp_ports:
   - 8125
 sysadmin_config::manage_servers::iptables_rules4: 
   tool: "zuul"
-  format_rule: "-m udp -p udp -s \1 --dport 8125 -j ACCEPT"
+  format_rule: '-m udp -p udp -s \1 --dport 8125 -j ACCEPT'
 sysadmin_config::manage_servers::sysadmins: ''
 
 # Tool status
