Adding nodepool to redstone
WORK IN PROGRESS

Change-Id: Ie040f67a4390bc5c4bd7cb1d5629d549bbf8bc55

--- a/forj/redstone-layout.yaml
+++ b/forj/redstone-layout.yaml
@@ -63,4 +63,17 @@ blueprint-deploy:
             - sysadmins:
             - vhost_name: "${node_vhost}"
             - site_name: 'cdkdev'
+     - nodepool:
+       name: nodepool
+       applications:
+        - nodepool:
+          class: cdk_project::nodepool
+          class_template: nodepool.pp.erb
+          class_params:
+            - vhost_name: "${node_vhost}"
+            - sysadmins:
+            - mysql_password:
+            - mysql_root_password:
+            - nodepool_ssh_private_key:
+            
 
