clone config repo from review.forj.io instead of jenkins.cdkdev.org
Change-Id: I360dfd8217927f25659bf53f80b5f826c8e772cf

--- a/forj/redstone-master.yaml
+++ b/forj/redstone-master.yaml
@@ -41,7 +41,7 @@ blueprint:
         git: https://review.forj.io/p/forj-oss/redstone
         puppet-apply: install
       - src-repo: config
-        git: http://jenkins.cdkdev.org:82/ubuntu/config.git
+        git: https://review.forj.io/p/oo-infra/config
         puppet-extra-modules: /opt/config/production/git/config/modules
   define:
     kit:
