user story #2203: update yaml comments in support of custom cert installs.
Change-Id: Iec013693a6eed71658cb7f7061bf038e2255b8cd

--- a/puppet/modules/runtime_project/files/hiera/layouts/maestro.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/maestro.yaml
@@ -20,6 +20,15 @@
 classes:
   - runtime_project::install
   - sysadmin_config::manage_servers
+# - cacerts::custom                  # user story #2189: uncomment this to enable custom cert installation
+
+# custom cert installation, additional steps when uncommenting cacerts::custom
+# If you have a custom cert to be used on any node, you can enable this feature
+# 1. setup the cert password on maestro node:
+#    cd /etc/puppet/secure;eyaml encrypt -l 'cacerts::custom::ca_pass' -s 'thepassword' | grep "cacerts::custom::ca_pass: ENC" >> /etc/puppet/hieradata/common.eyaml
+# 2. uncomment the source module that will hold all custom certs to be unpackaged.
+# cacerts::custom::source: 'puppet:///modules/custom_certs/certs'
+#
 
 # configure maestro to run our hiera_setup in runtime_project module
 hiera::data_class: 'runtime_project::hiera_setup'
