Allow branding for pastebin configuration
- Pastebin, Added new module lodgeit_config, to handle branding.
- Gerrit, allow complete path instead of only the image name.

Change-Id: I3748376f9e2b85817fb8009a9fce04da368e8f82

--- a/puppet/modules/runtime_project/files/hiera/layouts/ci.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/ci.yaml
@@ -49,6 +49,7 @@ cdk_project::jenkins::jenkins_solo:             true
 cdk_project::jenkins::zmq_event_receivers:      ''
 cdk_project::jenkins::sysadmins:                ''
 cdk_project::jenkins::openidssourl:             'https://login.launchpad.net/+openid'
+cdk_project::jenkins::logo:                     'puppet:///modules/openstack_project/openstack.png'
 cdk_project::jenkins::job_builder_configs:
   - 'zuul-layout.yaml'
   - 'fortify-scan.yaml'
