--- a/puppet/modules/runtime_project/files/hiera/layouts/util.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/util.yaml
@@ -47,6 +47,8 @@ cdk_project::paste::vhost_name:                   "%{::maestro::node_vhost_looku
 cdk_project::paste::site_name:                    'cdkdev'
 cdk_project::paste::image_name:                   'header-bg2.png'
 cdk_project::paste::image_source:                 'puppet:///lodgeit/header-bg2.png'
+cdk_project::paste::serveraliases:
+ - "%{::maestro::node_vhost_lookup::vname}"
 
 # setup server (iptables, rsyslog, tcpdump, ssh)
 sysadmin_config::manage_servers::iptables_public_tcp_ports:
