Modifying nodepool, adding more hiera params and facters.
- Adding facter so we can have the link for the icon and for jenkins as is needed.
- Moving the nodepool entry file from runtime_project to cdk_project.
- Adding all the parameters to hiera, so we can handle from there.

Change-Id: Ib9b00e1c0ea8f991e6021d8fad748db99e62347f

--- a/puppet/modules/runtime_project/files/hiera/layouts/layouts.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/layouts.yaml
@@ -99,7 +99,7 @@ jimador::discover:
     category: 'dev'
     dname: 'Nodepool Status'
     desc: 'Provide Nodepool logs.'
-    icon: true
+    icon: false
     visible: true
 
 # setup parameters for puppet class on all nodes, superseeds maestro.yaml settings.
