--- a/puppet/modules/runtime_project/files/hiera/layouts/nodepool.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/nodepool.yaml
@@ -21,7 +21,7 @@
 # PYTHON comment: It uses name and list of application (attaching a class name for each application, determined from the openstack-master.yaml)
 classes:
   - maestro::node_vhost_lookup
-  - runtime_project::nodepool_config
+  - cdk_project::nodepool
   - maestro::app::tool_status
   - sysadmin_config::manage_servers
 
@@ -29,26 +29,17 @@ classes:
 server::kit: 'demo'
 # PYTHON comment: Following data are extracted from the 'openstack-layout.yaml'
 # 'nodepool' tool
-cdk_project::nodepool::vhost_name: "%{::maestro::node_vhost_lookup::vname}"
-cdk_project::nodepool::mysql_password: 'changeme'
-cdk_project::nodepool::mysql_root_password: 'changeme'
-cdk_project::nodepool::nodepool_ssh_private_key: ''
-cdk_project::nodepool::image_log_via_http: false
+cdk_project::nodepool::vhost_name:                  "%{::maestro::node_vhost_lookup::vname}"
+cdk_project::nodepool::mysql_password:              'changeme'
+cdk_project::nodepool::mysql_root_password:         'changeme'
+cdk_project::nodepool::nodepool_ssh_private_key:    ''
+cdk_project::nodepool::image_log_document_root:     '/var/log/nodepool/image'
+cdk_project::nodepool::image_log_via_http:          false
 
 
 # setup server (iptables, rsyslog, tcpdump, ssh)
 sysadmin_config::manage_servers::iptables_public_tcp_ports:
-  - 22
   - 80
-  - 443
-  - 2003
-  - 8080
-  - 8081
-  - 8125
-sysadmin_config::manage_servers::iptables_rules4: 
-  tool: "nodepool"
-  format_rule: '-m udp -p udp -s \1 --dport 8125 -j ACCEPT'
-sysadmin_config::manage_servers::sysadmins: ''
 
 # Tool status
 maestro::tool_status::source: 'puppet:///modules/runtime_project/tool_status/nodepool/toolstatus.sh'
