--- a/puppet/modules/runtime_project/files/hiera/layouts/nodepool.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/nodepool.yaml
@@ -33,6 +33,21 @@ cdk_project::nodepool::vhost_name:                  "%{::maestro::node_vhost_loo
 cdk_project::nodepool::mysql_password:              'changeme'
 cdk_project::nodepool::mysql_root_password:         'changeme'
 cdk_project::nodepool::nodepool_ssh_private_key:    ''
+cdk_project::nodepool::nodepool_template:           'nodepool.yaml.erb'
+cdk_project::nodepool::sysadmins:                   ''
+cdk_project::nodepool::statsd_host:                 ''
+cdk_project::nodepool::jenkins_api_user:            ''
+cdk_project::nodepool::jenkins_api_key:             ''
+cdk_project::nodepool::jenkins_credentials_id:      ''
+cdk_project::nodepool::rackspace_username:          ''
+cdk_project::nodepool::rackspace_password:          ''
+cdk_project::nodepool::rackspace_project:           ''
+cdk_project::nodepool::hpcloud_username:            ''
+cdk_project::nodepool::hpcloud_password:            ''
+cdk_project::nodepool::hpcloud_project:             ''
+cdk_project::nodepool::tripleo_username:            ''
+cdk_project::nodepool::tripleo_password:            ''
+cdk_project::nodepool::tripleo_project:             ''
 cdk_project::nodepool::image_log_document_root:     '/var/log/nodepool/image'
 cdk_project::nodepool::image_log_via_http:          false
 
