--- a/puppet/modules/runtime_project/files/hiera/layouts/ci.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/ci.yaml
@@ -28,6 +28,7 @@ classes:
   - maestro::backup::manage_backup
   - maestro::app::tool_status
   - sysadmin_config::manage_servers
+  - sensu_config::sensuclient
 
 #Jenkins tool
 cdk_project::jenkins::vhost_name:               "%{::maestro::node_vhost_lookup::vname}"
