Adding the environment hash variable to cdk_project::nodepool manifest
Change-Id: I072517ba5bc34ac2888b362ccb86f2c8706a3870

--- a/puppet/modules/runtime_project/files/hiera/layouts/nodepool.yaml
+++ b/puppet/modules/runtime_project/files/hiera/layouts/nodepool.yaml
@@ -50,6 +50,7 @@ cdk_project::nodepool::tripleo_password:            ''
 cdk_project::nodepool::tripleo_project:             ''
 cdk_project::nodepool::image_log_document_root:     '/var/log/nodepool/image'
 cdk_project::nodepool::image_log_via_http:          false
+#cdk_project::nodepool::environment:
 
 
 # setup server (iptables, rsyslog, tcpdump, ssh)
